Se diseña la vista de motelsNearby

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,10 +50,10 @@
     <string name="sexShop_2">SEX-SHOP 2</string>
     <string name="sexShop_3">SEX-SHOP 3</string>
     <string name="sexShop_4">SEX-SHOP 4</string>
+        <!-- Strings for activity motelsNearby -->
+    <string name="subtittle_motelNEarby">Estos son los moteles mas cercanos a tu posicion</string>
+    <string name="back_list">VOLVER A LA LISTA</string>
 
-    <!-- Strings for activity MotelList -->
-
-    <string name="title_activity_motels_nearby">motelsNearby</string>
 
 
 
